--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "^1.22.3",
     "@react-native-community/blur": "^4.3.2",
     "@react-navigation/native": "^6.0.2",
     "axios": "^1.6.2",
