--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "^1.22.3",
     "@react-native-community/blur": "^4.3.2",
+    "@react-native-picker/picker": "^2.7.0",
     "@react-navigation/native": "^6.0.2",
     "axios": "^1.6.2",
     "date-fns": "^3.0.6",
