--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "react-native-picker-select": "^9.0.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-shadow": "^1.2.2",
+    "react-native-ui-lib": "^7.18.3",
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6"
   },
