--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-paper": "^5.12.3",
     "react-native-picker-select": "^9.0.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
