--- a/package.json
+++ b/package.json
@@ -13,30 +13,32 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^13.0.0",
-    "@react-native-async-storage/async-storage": "^1.22.3",
+    "@expo/config-plugins": "~7.8.4",
+    "@expo/metro-config": "~0.17.6",
+    "@expo/prebuild-config": "~6.7.4",
+    "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-community/blur": "^4.3.2",
-    "@react-native-community/slider": "^4.5.0",
-    "@react-native-picker/picker": "^2.7.0",
+    "@react-native-community/slider": "4.4.2",
     "@react-navigation/native": "^6.0.2",
     "axios": "^1.6.2",
     "date-fns": "^3.0.6",
-    "expo": "~49.0.15",
-    "expo-font": "~11.4.0",
-    "expo-linking": "~5.0.2",
-    "expo-router": "^2.0.0",
-    "expo-splash-screen": "~0.20.5",
-    "expo-status-bar": "~1.6.0",
-    "expo-system-ui": "~2.4.0",
-    "expo-web-browser": "~12.3.2",
+    "expo": "^50.0.14",
+    "expo-font": "~11.10.3",
+    "expo-linking": "~6.2.2",
+    "expo-modules-autolinking": "~1.10.3",
+    "expo-router": "^3.4.8",
+    "expo-splash-screen": "~0.26.4",
+    "expo-status-bar": "~1.11.1",
+    "expo-system-ui": "~2.9.3",
+    "expo-web-browser": "~12.8.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.6",
-    "react-native-gesture-handler": "~2.12.0",
+    "react-native": "0.73.6",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-paper": "^5.12.3",
-    "react-native-picker-select": "^9.0.0",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-native-shadow": "^1.2.2",
     "react-native-ui-lib": "^7.18.3",
     "react-native-vector-icons": "^10.0.3",
@@ -46,8 +48,9 @@
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
     "@types/react-native-vector-icons": "^6.4.18",
+    "babel-preset-expo": "^10.0.1",
     "jest": "^29.2.1",
-    "jest-expo": "~49.0.0",
+    "jest-expo": "~50.0.4",
     "react-test-renderer": "18.2.0",
     "typescript": "^5.1.3"
   },
