--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "react-native": "0.73.6",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-paper": "^5.12.3",
-    "react-native-safe-area-context": "4.8.2",
+    "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "~3.29.0",
     "react-native-shadow": "^1.2.2",
     "react-native-ui-lib": "^7.18.3",
