--- a/eas.json
+++ b/eas.json
@@ -5,15 +5,16 @@
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal"
+      "distribution": "internal",
+      "ios": {
+        "simulator": true
+      }
     },
     "preview": {
       "distribution": "internal",
-      
       "android": {
         "buildType": "apk"
       }
-      
     },
     
     "production": {}
