--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/config-plugins": "~7.8.4",
-    "@expo/metro-config": "~0.17.6",
-    "@expo/prebuild-config": "~6.7.4",
+    "@expo/config-plugins": "~7.8.0",
+    "@expo/metro-config": "~0.17.1",
+    "@expo/prebuild-config": "~6.7.0",
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-community/blur": "^4.3.2",
@@ -24,9 +24,10 @@
     "axios": "^1.6.2",
     "date-fns": "^3.0.6",
     "expo": "^50.0.14",
+    "expo-dev-client": "~3.3.11",
     "expo-font": "~11.10.3",
     "expo-linking": "~6.2.2",
-    "expo-router": "^3.4.8",
+    "expo-router": "~3.4.8",
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.3",
@@ -35,8 +36,10 @@
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-google-mobile-ads": "^13.1.0",
     "react-native-paper": "^5.12.3",
-    "react-native-safe-area-context": "^4.9.0",
+    "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-shadow": "^1.2.2",
     "react-native-ui-lib": "^7.18.3",
@@ -45,13 +48,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.14",
+    "@types/react": "~18.2.45",
     "@types/react-native-vector-icons": "^6.4.18",
-    "babel-preset-expo": "^10.0.1",
-    "jest": "^29.2.1",
-    "jest-expo": "~50.0.4",
+    "babel-preset-expo": "^10.0.0",
+    "jest": "^29.3.1",
+    "jest-expo": "^50.0.0",
     "react-test-renderer": "18.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.3.0"
   },
   "overrides": {
     "react-refresh": "~0.14.0"
