--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native": "0.73.6",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-google-mobile-ads": "^13.1.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.12.3",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "4.8.2",
