--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-native-community/blur": "^4.3.2",
     "@react-native-community/slider": "4.4.2",
     "@react-navigation/native": "^6.0.2",
+    "@rneui/base": "^4.0.0-rc.8",
     "axios": "^1.6.2",
     "date-fns": "^3.0.6",
     "expo": "^50.0.14",
@@ -35,6 +36,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-google-mobile-ads": "^13.1.0",
     "react-native-linear-gradient": "^2.8.3",
