--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll"
   },
@@ -24,7 +24,7 @@
     "@rneui/base": "^4.0.0-rc.8",
     "axios": "^1.6.2",
     "date-fns": "^3.0.6",
-    "expo": "^50.0.14",
+    "expo": "^50.0.15",
     "expo-dev-client": "~3.3.11",
     "expo-font": "~11.10.3",
     "expo-linking": "~6.2.2",
@@ -36,7 +36,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-branch": "^6.2.1",
+    "react-native-canvas": "^0.1.39",
     "react-native-fast-image": "^8.6.3",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-google-mobile-ads": "^13.1.0",
     "react-native-linear-gradient": "^2.8.3",
@@ -45,8 +48,11 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-shadow": "^1.2.2",
+    "react-native-share": "^10.1.0",
+    "react-native-svg": "^15.1.0",
     "react-native-ui-lib": "^7.18.3",
     "react-native-vector-icons": "^10.0.3",
+    "react-native-view-shot": "^3.8.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
