--- a/eas.json
+++ b/eas.json
@@ -1,6 +1,7 @@
 {
   "cli": {
-    "version": ">= 5.9.3"
+    "version": ">= 5.9.3",
+    "promptToConfigurePushNotifications": false
   },
   "build": {
     "development": {
@@ -16,10 +17,15 @@
         "buildType": "apk"
       }
     },
-    
     "production": {}
   },
   "submit": {
-    "production": {}
+    "production": {
+      "ios":{
+        "appleId": "otaviocunhaps@hotmail.com",
+        "ascAppId": "6496061080",
+        "appleTeamId": "J67VWTY758"
+      }
+    }
   }
 }
