--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "moviechecklist",
   "main": "expo-router/entry",
-  "version": "1.0.0",
+  "version": "1.1",
   "scripts": {
     "start": "expo start",
     "android": "expo run:android",
@@ -36,12 +36,13 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-appearance": "^0.3.4",
     "react-native-branch": "^6.2.1",
     "react-native-canvas": "^0.1.39",
     "react-native-fast-image": "^8.6.3",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.14.0",
-    "react-native-google-mobile-ads": "^13.1.0",
+    "react-native-google-mobile-ads": "^13.2.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.12.3",
     "react-native-responsive-fontsize": "^0.5.1",
@@ -49,7 +50,7 @@
     "react-native-screens": "~3.29.0",
     "react-native-shadow": "^1.2.2",
     "react-native-share": "^10.1.0",
-    "react-native-svg": "^15.1.0",
+    "react-native-svg": "14.1.0",
     "react-native-ui-lib": "^7.18.3",
     "react-native-vector-icons": "^10.0.3",
     "react-native-view-shot": "^3.8.0",
