--- a/app.json
+++ b/app.json
@@ -17,7 +17,7 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": false, 
+      "supportsTablet": true, 
       "bundleIdentifier": "com.psiotavio.MovieChecklist",
       "bitcode": false  
     },
