--- a/app.json
+++ b/app.json
@@ -1,9 +1,8 @@
 {
   "expo": {
-    "jsEngine": "hermes" ,
     "name": "Watchfolio",
     "slug": "MovieChecklist",
-    "version": "1.1",
+    "version": "2.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "scheme": "yourapp",
@@ -17,16 +16,16 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true, 
+      "supportsTablet": true,
       "bundleIdentifier": "com.psiotavio.MovieChecklist",
-      "bitcode": false  
+      "bitcode": false
     },
     "android": {
+      "versionCode": 2,
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/Adaptive-Icon-foreground.png",
         "backgroundColor": "#250737"
       },
-    
       "package": "com.psiotavio.MovieChecklist"
     },
     "web": {
@@ -35,7 +34,8 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      "expo-font"
     ],
     "experiments": {
       "typedRoutes": true
