--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "main": "expo-router/entry",
   "version": "1.1",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
@@ -13,44 +13,44 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/config-plugins": "~7.8.0",
-    "@expo/metro-config": "~0.17.1",
-    "@expo/prebuild-config": "~6.7.0",
+    "@expo/config-plugins": "~8.0.0",
+    "@expo/metro-config": "~0.18.1",
+    "@expo/prebuild-config": "~7.0.0",
     "@expo/vector-icons": "^14.0.0",
-    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/blur": "^4.3.2",
-    "@react-native-community/slider": "4.4.2",
+    "@react-native-community/datetimepicker": "7.7.0",
+    "@react-native-community/slider": "4.5.2",
     "@react-navigation/native": "^6.0.2",
     "@rneui/base": "^4.0.0-rc.8",
     "axios": "^1.6.2",
     "date-fns": "^3.0.6",
-    "expo": "^50.0.15",
-    "expo-dev-client": "~3.3.11",
-    "expo-font": "~11.10.3",
-    "expo-linking": "~6.2.2",
-    "expo-router": "~3.4.8",
-    "expo-splash-screen": "~0.26.4",
-    "expo-status-bar": "~1.11.1",
-    "expo-system-ui": "~2.9.3",
-    "expo-web-browser": "~12.8.2",
+    "expo": "51",
+    "expo-dev-client": "~4.0.11",
+    "expo-font": "~12.0.4",
+    "expo-linking": "~6.3.1",
+    "expo-router": "~3.5.10",
+    "expo-splash-screen": "~0.27.4",
+    "expo-status-bar": "~1.12.1",
+    "expo-system-ui": "~3.0.4",
+    "expo-web-browser": "~13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.6",
-    "react-native-appearance": "^0.3.4",
+    "react-native": "0.74.1",
     "react-native-branch": "^6.2.1",
     "react-native-canvas": "^0.1.39",
     "react-native-fast-image": "^8.6.3",
     "react-native-fs": "^2.20.0",
-    "react-native-gesture-handler": "~2.14.0",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-google-mobile-ads": "^13.2.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.12.3",
     "react-native-responsive-fontsize": "^0.5.1",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
     "react-native-shadow": "^1.2.2",
     "react-native-share": "^10.2.0",
-    "react-native-svg": "14.1.0",
+    "react-native-svg": "15.2.0-rc.0",
     "react-native-ui-lib": "^7.18.3",
     "react-native-vector-icons": "^10.0.3",
     "react-native-view-shot": "^3.8.0",
@@ -58,13 +58,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
+    "@types/react": "~18.2.79",
     "@types/react-native-vector-icons": "^6.4.18",
-    "babel-preset-expo": "^10.0.0",
+    "babel-preset-expo": "~11.0.0",
     "jest": "^29.3.1",
-    "jest-expo": "^50.0.0",
+    "jest-expo": "~51.0.1",
     "react-test-renderer": "18.2.0",
-    "typescript": "^5.3.0"
+    "typescript": "~5.3.3"
   },
   "overrides": {
     "react-refresh": "~0.14.0"
