--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native": "0.74.1",
     "react-native-branch": "^6.2.1",
     "react-native-canvas": "^0.1.39",
+    "react-native-device-info": "^11.1.0",
     "react-native-fast-image": "^8.6.3",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.16.1",
@@ -54,7 +55,8 @@
     "react-native-ui-lib": "^7.18.3",
     "react-native-vector-icons": "^10.0.3",
     "react-native-view-shot": "^3.8.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "react-refresh": "~0.14.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
