--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "moviechecklist",
   "main": "expo-router/entry",
-  "version": "1.1",
+  "version": "2.1.3",
   "scripts": {
     "start": "expo start --dev-client",
     "android": "expo run:android",
@@ -30,11 +30,12 @@
     "expo-font": "~12.0.4",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.10",
+    "expo-sharing": "~12.0.1",
     "expo-splash-screen": "~0.27.4",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.4",
     "expo-web-browser": "~13.0.3",
-    "react": "18.2.0",
+    "react": "^18.3.1",
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
     "react-native-branch": "^6.2.1",
@@ -43,7 +44,7 @@
     "react-native-fast-image": "^8.6.3",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.16.1",
-    "react-native-google-mobile-ads": "^13.2.0",
+    "react-native-google-mobile-ads": "^13.6.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.12.3",
     "react-native-responsive-fontsize": "^0.5.1",
@@ -54,7 +55,7 @@
     "react-native-svg": "15.2.0-rc.0",
     "react-native-ui-lib": "^7.18.3",
     "react-native-vector-icons": "^10.0.3",
-    "react-native-view-shot": "^3.8.0",
+    "react-native-view-shot": "3.8.0",
     "react-native-web": "~0.19.6",
     "react-refresh": "~0.14.0"
   },
