--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "moviechecklist",
   "main": "expo-router/entry",
-  "version": "2.1.3",
+  "version": "2.2.1",
   "scripts": {
     "start": "expo start --dev-client",
     "android": "expo run:android",
@@ -35,11 +35,12 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.4",
     "expo-web-browser": "~13.0.3",
-    "react": "^18.3.1",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-native": "0.74.1",
     "react-native-branch": "^6.2.1",
     "react-native-canvas": "^0.1.39",
+    "react-native-copilot": "^3.3.2",
     "react-native-device-info": "^11.1.0",
     "react-native-fast-image": "^8.6.3",
     "react-native-fs": "^2.20.0",
@@ -56,8 +57,10 @@
     "react-native-ui-lib": "^7.18.3",
     "react-native-vector-icons": "^10.0.3",
     "react-native-view-shot": "3.8.0",
+    "react-native-walkthrough-tooltip": "^1.6.0",
     "react-native-web": "~0.19.6",
-    "react-refresh": "~0.14.0"
+    "react-refresh": "~0.14.0",
+    "rn-tooltip": "^3.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
